01-Springboot-hello-world/k8s_manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: springboot-hello-app
  labels:
    app: springboot-hello-app
    app.kubernetes.io/name: springboot-hello-app
    app.kubernetes.io/part-of: java-apps
    app.openshift.io/runtime: springboot
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: springboot-hello-app
    deployment: springboot-hello-app
