01-Springboot-hello-world/k8s_manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: springboot-hello-app
  labels:
    app: springboot-hello-app
    app.kubernetes.io/name: springboot-hello-app
    app.kubernetes.io/part-of: java-apps
    app.openshift.io/runtime: springboot
spec:
  host: springboot-hello-app.apps.mc3.vpslab.com
  to:
    kind: Service
    name: springboot-hello-app
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
